--- a/layout/index.html
+++ b/layout/index.html
@@ -8,6 +8,16 @@
 	img{width:100%;display: block;}
 		.container{}
 		.row{margin:0 auto;padding:5px;}
+		/*.row.w1000{width: 1000px;}
+		.row:after{content:"";display: block;clear: both;}
+		.row div[class*="span"]{float:left;margin-left:2%;}
+		.row div[class*="span"]:first-child{margin-left:0;}
+		.span_6{width:49%;}
+		.span_4{width:32%;}
+		.span_3{width:23.5%;}*/
+
+		
+		@media screen and (min-width:769px){
 		.row.w1000{width: 1000px;}
 		.row:after{content:"";display: block;clear: both;}
 		.row div[class*="span"]{float:left;margin-left:2%;}
@@ -15,6 +25,26 @@
 		.span_6{width:49%;}
 		.span_4{width:32%;}
 		.span_3{width:23.5%;}
+		}
+		@media screen and (min-width:576px) and (max-width:768px){
+		.row.w1000{width:95%;}
+		.row:after{content:"";display: block;clear: both;}
+		.row div[class*="span"]{float:left;margin-left:2%;margin-bottom:10px;}
+		.row div[class*="span"]:first-child,
+		.row div[class*="span"]:nth-child(3){margin-left:0;}
+		.span_6,
+		.span_4,
+		.span_3{width:49%;}
+		.md_vnone{display:none;}
+		}
+		@media screen and (max-width:575px){
+			.row{padding:10px;}
+			.row div{margin-bottom:10px;}
+			.mo_vnone{display:none;}
+		}
+
+
+
 
 		/*card*/
 		.card{border:1px solid #ddd;border-radius:10px;background: #fff;}
@@ -30,7 +60,7 @@
 		/*button color*/
 		.btn.blue:hover{background:blue;}
 		.btn.pink:hover{background:orange;}
-		
+
 		.btn.blue{background:#007bff;}
 		.btn.pink{background:red;}
 
@@ -52,7 +82,7 @@
 
 				</div>
 			</div>
-			<div class="span_6">
+			<div class="span_6 mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
@@ -78,7 +108,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span_4">
+			<div class="span_4 mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
@@ -88,7 +118,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span_4">
+			<div class="span_4 md_vnone mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
@@ -112,7 +142,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span_3">
+			<div class="span_3 mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
@@ -122,7 +152,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span_3">
+			<div class="span_3 mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
@@ -132,7 +162,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span_3">
+			<div class="span_3 mo_vnone">
 				<div class="card">
 					<img src="../images/testimg.jpg" alt="card image" class="card-img-top">
 					<div class="card-body">
